<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_description"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription">

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/green"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/radio_low" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/radio_medium" />

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_high" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="Text View"
        android:textSize="18sp"
        android:drawablePadding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:drawableStartCompat="@drawable/ic_baseline_category_24" />

    <TextView
        android:id="@+id/textViewRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:drawablePadding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
        app:drawableStartCompat="@drawable/ic_baseline_repeat_24" />

    <TextView
        android:id="@+id/textViewSave"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/text_view_save"
        android:textColor="@color/white"
        android:background="@color/dark_blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepeat" />
</androidx.constraintlayout.widget.ConstraintLayout>